# SimpleEngine

./: .gitmodules  CMakeLists.txt
core/: CMakeLists.txt
core/include/: application.h  log.h  window.h
core/src/: application.cpp  window.cpp
sdk/: CMakeLists.txt
sdk/src/: main.cpp
